fixing ios alignment issues

--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -6,4 +6,7 @@ page-history {
     text-align: center;
     vertical-align: bottom;
   }
+  .col{
+    padding: 0px;
+  }
 }
