--- a/src/pages/mylist/mylist.scss
+++ b/src/pages/mylist/mylist.scss
@@ -3,4 +3,7 @@ page-mylist {
     text-align: center;
     vertical-align: bottom;
   }
+  .col{
+    padding: 0px;
+  }
 }
